# cslib

./: .gitignore  README.md  environment.yml  glance_gray.mat  meta.yaml  pyproject.toml  requirements.txt
apps/test/: main.py  ui.py
examples/algorithms/: selective_search.py
examples/data/: detection.py  fmb.py  msrs.py  roadscene.py
examples/utils/: config.py  image.py
experiments/: LeNet_demo.py  config.py  fusion_metrics_demo.py  fusion_run_demo.py  linear_regression.py  mnist_demo.py  sr_run_demo.py  test.py  test2.py
libs/: __init__.py  utils.py
models/: README.md  check_path.sh
models/LeNet/: README.md  config.py  dataset.py  model.py  test.py  test.sh  train.py  train.sh  transform.py
models/RCNN/: README.md  config.py  dataset.py  evaluate.py  model.py  save_feature.py  save_feature.sh  test_classifier.py  test_classifier.sh  test_finetune.py  test_finetune.sh  train.py  train.sh  train_box.py  train_box.sh  train_classifier.py  train_classifier.sh  train_finetune.py  train_finetune.sh  train_svm.py  train_svm.sh  transform.py
models/VIT/: test.py
samples/: exp_classify_alexnet_train.sh  exp_classify_lenet.sh  exp_classify_lenet_train.sh  exp_fusion_deepfuse_gray.sh  metrics.sh  tool_build_folder.sh
scripts/: build_folder.py  config.py  fusion_metrics_demo.py  fusion_run_demo.py  fusion_train_demo.py  gan_run_demo.py  gan_train_demo.py  general_inference.py  general_train.py  linear_regression.py  main.py  script_keras_to_pytorch.py  sr_run_demo.py  test2.py  test3.py  test4.py
scripts/app/: base_gui.py  dialogs.py
scripts/draw/: run.py
(+243 files in other folders)
