[project]
name = "cslib"
version = "0.2.0"
description = "AI Lab of Charles Shan -- A Notebook for AI Learning"
authors = [{name = "Charles Shan", email = "charles.shht@gmail.com"}]
requires-python = ">=3.7"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "torchmetrics",
    "tensorboard",
    "kornia",
    "seaborn",
    "albumentations",
    "click",
    "einops",
    "pycocotools",
    "scikit-image",
    "scikit-learn",
    "tqdm",
    "timm",
    "wandb",
    "visdom",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"cslib.metrics.fusion" = [
    "resources/ADF.png",
    "resources/CDDFuse.png",
    "resources/DenseFuse.png",
    "resources/ir.png",
    "resources/vis.png",
    "resources/dmey.mat",
]

[project.optional-dependencies]
test = ["pytest"]
